Add make move functionality

--- a/001-tic-tac-toe/index.html
+++ b/001-tic-tac-toe/index.html
@@ -40,7 +40,7 @@
             <div id="tile-5" class="tile"></div>
             <div id="tile-6" class="tile"></div>
             <div id="tile-7" class="tile"></div>
-            <div id="tile-8" onclick="showScreen('results');" class="tile"></div>
+            <div id="tile-8" class="tile"></div>
         </div>
         <button onclick="showScreen('menu');">Back</button>
     </div>
