--- a/001-tic-tac-toe/index.html
+++ b/001-tic-tac-toe/index.html
@@ -28,6 +28,8 @@
 
     <div id="game">
         <div id="header">
+            <p id="player-x">Player X</p>
+            <p id="player-o">Player O</p>
         </div>
         <div id="board">
             <div id="tile-0" class="tile"></div>
