--- a/001-tic-tac-toe/index.html
+++ b/001-tic-tac-toe/index.html
@@ -32,8 +32,8 @@
             <p id="player-o">Player O</p>
         </div>
         <div id="board">
-            <div id="tile-0" class="tile"></div>
-            <div id="tile-1" class="tile"></div>
+            <div id="tile-0" class="tile">X</div>
+            <div id="tile-1" class="tile">X</div>
             <div id="tile-2" class="tile"></div>
             <div id="tile-3" class="tile"></div>
             <div id="tile-4" class="tile"></div>
@@ -42,14 +42,14 @@
             <div id="tile-7" class="tile"></div>
             <div id="tile-8" class="tile"></div>
         </div>
-        <button onclick="showScreen('menu');">Back</button>
+        <button onclick="showScreen('select-mode');">Back</button>
     </div>
 
     <div id="results">
         <p>Winner is X</p>
         <!-- <p>Winner is O</p>
         <p>It's a draw</p> -->
-        <button onclick="showScreen('game');">Play again</button>
+        <button onclick="selectMode(currentMode.numberOfPlayers, currentMode.playerSymbol);">Play again</button>
         <button onclick="showScreen('menu');">To menu</button>
     </div>
     <script src="script.js"></script>
