Add winner checking

--- a/001-tic-tac-toe/index.html
+++ b/001-tic-tac-toe/index.html
@@ -46,9 +46,7 @@
     </div>
 
     <div id="results">
-        <p>Winner is X</p>
-        <!-- <p>Winner is O</p>
-        <p>It's a draw</p> -->
+        <p id="winner-message"></p>
         <button onclick="selectMode(currentMode.numberOfPlayers, currentMode.playerSymbol);">Play again</button>
         <button onclick="showScreen('menu');">To menu</button>
     </div>
